# clue_oxide

./: .gitignore  Cargo.toml  README.md  README.md.backup  change_log.txt  out.csv  perf.data  perf.data.old  profile.sh  todo.txt
assets/: VO(TCPP-Zn2-bpy).cif  a_TEMPO_a_water_a_glycerol.mol2  auxiliary_signals.csv  cluster_file.txt  xyzw.csv
doc/: .example_input.clue.swp  example_input.clue  filetree.txt  particle_filter.txt  particle_specifiers.txt  tensor_example.clue
doc/deprected/: example_input.clue  particle_filter.txt  particle_specifiers.txt
examples/: plot_decay.py  plot_decays.py
examples/000_io/: io.clue  log.txt  old_matlab_tensors.txt  out.csv  r2CCE_out.csv  r2cce_out.csv  time_axis.csv
examples/000_io/tbd/: out_12.csv  out_r2CCE.csv
examples/MOF_VO(TCPP-Zn2-bpy)/: sim.clue
examples/concentration_scan/: Cargo.toml  plot_decays.py
examples/concentration_scan/src/: main.rs
examples/example_TEMPO/: plot_decays.py  sim.clue
examples/pyclue_example/: sim.py
manual/: CluE.aux  CluE.bbl  CluE.bcf  CluE.blg  CluE.run.xml  CluE.tex  CluE_Oxide.aux  CluE_Oxide.blg  CluE_Oxide.run.xml  CluE_Oxide.tex  glassyMatrix_RefocusedEcho.blg  preamble.sty  refs.bib
old/: Cargo.toml  tbd_Cargo.toml
old/src/: clue_errors.rs  cluster.rs  config.rs  info.rs  integration_grid.rs  io.rs  lib.rs  main.rs  quantum.rs  space_3d.rs
old/src.0.2.2-alpha.6/: cluster.rs  config.rs  io.rs  kmeans.rs  physical_constants.rs  signal.rs  structure.rs
old/src.0.2.2-alpha.6/cluster/: adjacency.rs  cluster_set.rs  find_isolated_subgraphs.rs  read_clusters.rs
old/src.0.2.2-alpha.6/config/: command_line_input.rs  parse_config.rs  parse_filter.rs  token_expressions.rs
old/src.0.2.2-alpha.6/info/: license.rs  version.rs  warrenty.rs
old/src.0.2.2-alpha.6/quantum/: spin_hamiltonian.rs
old/src.0.2.2-alpha.6/signal/: calculate_analytic_restricted_2cluster_signals.rs  (+2 more)
pyclue/: Cargo.toml  pyproject.toml
pyclue/old/src/: analytic_restricted_2cluster.rs  io.rs  py_clue_errors.rs  py_cluster.rs  py_config.rs  py_particle.rs  py_signal.rs  py_structure.rs  py_tensors.rs
pyclue/src/: io.rs  lib.rs  main.py  py_cluster.rs  py_config.rs  py_exchange_groups.rs  py_particle.rs  py_physical_constants.rs  py_signal.rs  py_spin_operators.rs  py_structure.rs  py_tensors.rs  run_clue.rs
src/: .structure.rs.swp  Element.rs  PDB.rs  Particle.rs  Structure.rs  clue_errors.rs  cluster.rs  cluster_signal.rs  config.rs  elements.rs  exchange_groups.rs  find_clusters.rs  get_subclusters.rs  integration_grid.rs  io.rs  isotopes.rs  lexer.rs  lib.rs  main.rs  math.rs  methyl.rs  misc.rs  particle.rs  particle_config.rs  particle_filter.rs  particle_specifier.rs  pdb.rs  phys.rs  physical_constants.rs  primary_structure.rs  quantum.rs  signal.rs  space_3d.rs  spin_operators.rs  structure.rs  symmetric_list_2d.rs  tensors.rs  vec_funcs.rs  vector3.rs
src/cluster/: .connected_subgraphs.rs.swp  adjacency.rs  build_adjacency_list.rs  connected_subgraphs.rs  find_clusters.rs  get_subclusters.rs  methyl_clusters.rs  partition.rs  read_clusters.rs  unit_of_clustering.rs
src/config/: command_line_input.rs  config_toml.rs  lexer.rs  parse_filter.rs  parse_properties.rs  particle_config.rs  token.rs  token_algebra.rs  token_expressions.rs  token_stream.rs
src/deprected/: cluster_correlation_expansion.rs  elements.rs  find_clusters.rs  particle_specifier.rs  particle_specifier_v2.rs
src/info/: help.rs  license.rs  title.rs  version.rs  warrenty.rs
src/pending/: ParticleSpecifier.rs  Structure.rs  primary_structure.rs  quantum.rs  xyz.rs
src/quantum/: spin_hamiltonian.rs  spin_operators.rs  tensors.rs
src/signal/: calculate_analytic_restricted_2cluster_signals.rs  calculate_cluster_signal.rs  calculate_signal.rs  cluster_correlation_expansion.rs
src/structure/: .extended_structure.rs.swp  .pdb.rs.swp  .primary_structure.rs.swp  cif.rs  deprecates_pdb.rs  exchange_groups.rs  extended_structure.rs  finalize_structure.rs  gro.rs  parse_pdb.rs  particle.rs  particle_filter.rs  pdb.rs  primary_structure.rs  tbd0_primary_structure.rs
(+21 files in other folders)
