[package]
name = "clue_oxide"
version = "0.2.3-alpha.1" # on update, ensure to also update src/info/version.rs
edition = "2021"
authors = ["Samuel M. Jahn <jahn.samuel@gmail.com>"]
description = "CluE Oxide (Cluster Evolution Oxide) is a spin dynamics simulation program for electron spin decoherence"
license = "GPL-3.0"
repository = "https://github.com/jahnsam/clue_oxide"
documentation = "https://github.com/jahnsam/clue_oxide/blob/main/manual/CluE_Oxide.pdf"
readme = "README.md"
keywords = ["quantum", "spin","simulation","CCE","EPR"]
categories = ["command-line-utilities"]
exclude =["/.github/*","examples/*","assets/*","manual/*","pyclue/*",
         "CluE_Oxide_logo.*"]
[profile.dev]
opt-level = 3

[dependencies]
csv = "1.1"

lebedev_laikov = "0.1.0"

ndarray = '0.16.0'
ndarray-rand = "0.15.0"
num-complex = "0.4"

rand = "0.8"
rand_chacha = "0.3.1"
rand_distr = "0.4"

rayon = "1.6.1"

substring = "1.4"

toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

strum = "0.27"
strum_macros = "0.27"


[target.'cfg(unix)'.dependencies]
# To build openblas instead of using the system's openblas, comment this line
# and uncomment the next.
ndarray-linalg = { version = "0.17", features = ["openblas-system"] }
#ndarray-linalg = { version = "0.17", features = ["openblas-static"] }

#[target.'cfg(windows)'.dependencies.ndarray-linalg]
#version = '0.17.0'
#features = ['intel-mkl']


#[target.'cfg(windows)'.dev-dependencies]
#criterion = '0.3.0'
