[package]
name = "pyclue"
version = "0.1.0-alpha.4"
edition = "2018"

[lib]
name = "clue_oxide"
crate-type = ["cdylib"]

[dependencies.clue_oxide]
path = "../../clue_oxide"

[dependencies.pyo3]
version = "0.24.0"
features = ["extension-module","num-complex"]

[dependencies]
ndarray = '0.16.0'
num-complex = "0.4"
numpy  = "0.24.0"

rand_chacha = "0.3.1"
