[package]
name = "pyclue"
version = "0.1.1-alpha.1"
edition = "2018"

[lib]
name = "clue_oxide"
crate-type = ["cdylib"]

[dependencies.clue_oxide]
path = "../"

[dependencies.pyo3]
version = "0.24.0"
features = ["extension-module","num-complex","serde"]

[dependencies]
ndarray = '0.16.0'
num-complex = "0.4"
numpy  = "0.24.0"

rand_chacha = "0.3.1"

toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

